--- a/index.html
+++ b/index.html
@@ -1,231 +1,254 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-		<title>HTML Academy: Девайс</title>
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
-    <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-  <body>
-  	<header class="main-header">
-  		<nav class="main-navigation">
-  			<a class=" main-header-logo">
-  				<img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
-  			</a>
-				<form class="search" action="https://echo.htmlacademy.ru" method="get">
-					<input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
-					<button class="search-button" type="submit"><span>Найти</span></button>
-				</form>
-  			<ul class="user-navigation">
-  				<li><a class="login-link" href="login.html">Войти</a></li>
-  				<li><a href="#">Сравнить</a></li>
-  				<li><a href="#">Корзина</a></li>
-  			</ul>
-  			<ul class="site-navigation">
-  				<li><a href="catalog.html">Каталог товаров</a></li>
-  				<li><a href="#">Доставка</a></li>
-  				<li><a href="#">Гарантия</a></li>
-  				<li><a href="#">Контакты</a></li>
-  			</ul>
-  		</nav>
-  	</header>
-  	<main class="container">
-  		<h1 class="visually-hidden">Интернет-магазин Device</h1>
-  		<section class="sliders">
-  			<h2 class="visually-hidden">Лучшие товары</h2>
-  			<ol>
-  				<li class="sliders-item">
-						<section class="modal">
-							<h3>Делай селфи, как Бен Стиллер!</h3>
-							<p>
-								Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.
-							</p>
-							<a href="#"><img src="img/slider-1.png" width="384" height="486" alt="Фото самой длинной палки для селфи"></a>
-							<table class="advantages">
-								<tr>
-									<td>8,5 м</td>
-									<td>5 кг</td>
-									<td>Карбон</td>
-								</tr>
-								<tr>
-									<td>Длина палки</td>
-									<td>Вес палки</td>
-									<td>Материал</td>
-								</tr>
-							</table>
-							<a class="button" href="#"><span>Подробнее</span></a>
-						</section>
-  				</li>
-  				<li>
-						<section class="modal">
-							<h3>Худеем правильно!</h3>
-							<p>
-								Мотивирующие фитнес-браслеты помогут найти в себе силы  не пропускать занятия и соблюдать диету.
-							</p>
-							<a href="#"><img src="img/slider-2.png" width="345" height="485" alt="Фото мотивирующего браслета"></a>
-							<table class="advantages">
-								<tr>
-									<td>48 часов</td>
-								</tr>
-								<tr>
-									<td>Без подзарядки</td>
-								</tr>
-							</table>
-							<a class="button" href="#"><span>Подробнее</span></a>
-						</section>
-  				</li>
-  				<li>
-						<section class="modal">
-							<h3>Порхает как бабочка, жалит как пчела!</h3>
-							<p>
-								Этот обычный, на первый взгляд, квадрокоптер оснащен  мощным лазером, замаскированным под стандартную камеру.
-							</p>
-							<a href="#"><img src="img/slider-3.png" width="526" height="334" alt="Фото квадрокоптера с лазером"></a>
-							<table class="advantages">
-								<tr>
-									<td>800 м</td>
-									<td>50 м</td>
-								</tr>
-								<tr>
-									<td>Дальность полета</td>
-									<td>Радиус поражения</td>
-								</tr>
-							</table>
-							 <a class="button" href="#"><span>Подробнее</span></a>
-						</section>
-  				</li>
-  			</ol>
-  		</section>
-  		<section class="popular">
-  			<h2 class="visually-hidden">Популярные товары:</h2>
-  			<ul class="popular-items">
-  				<li><a href="">Виртуальная реальность</a></li>
-  				<li><a href="">Моноподы для селфи</a></li>
-  				<li><a href="">Экшн-камеры</a></li>
-  				<li><a href="">Фитнес-браслеты</a></li>
-  				<li><a href="">Умные часы</a></li>
-  				<li><a href="">Квадрокоптеры</a></li>
-  			</ul>
-  		</section>
-  		<section class="services">
-  			<h2 class="visually-hidden">Наши сервисы:</h2>
-  			<ul class="servises-list">
-  				<li><button class="button">Доставка</button></li>
-  				<li><button class="button">Гарантия</button></li>
-  				<li><button class="button">Кредит</button></li>
-  			</ul>
-  			<ul class="services-description">
-  				<li>
-  					<h3>Доставка</h3>
-  					<p>
-  						Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
-  						Ведь мы неплохо заработаем, поднимая его на ваш этаж.
-  					</p>
-  				</li>
-  				<li>
-  					<h3>Гарантия</h3>
-  					<p>
-  						Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый.
-  						Товар, не дом, конечно же.
-  					</p>
-  				</li>
-  				<li>
-  					<h3>Кредит</h3>
-  					<p>
-  						Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
-  						Выгодные для нашего банка, разумеется.
-  					</p>
-  				</li>
-  			</ul>
-  		</section>
-  		<section class="companies">
-  			<h2 class="visually-hidden">На нашем сайте представлена продукция популярных брендов:</h2>
-  			<ul class="companies-list">
-  				<li><a href="#"><img src="img/logo-1.jpg" width="260" height="100" alt="Dji"></a></li>
-  				<li><a href="#"><img src="img/logo-2.jpg" width="260" height="100" alt="Sp Gadgets"></a></li>
-  				<li><a href="#"><img src="img/logo-3.jpg" width="260" height="100" alt="Go Pro"></a></li>
-  				<li><a href="#"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a></li>
-  			</ul>
-  		</section>
-  		<section class="about-us">
-  			<h2>О нас</h2>
-  			<p>
-				Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
-  			</p>
-  			<p>
-				Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
-			</p>
-  			<ul class="deliveries">
-  				<li><a href="#">Деловые Линии</a></li>
-  				<li><a href="#">Автотрейдинг</a></li>
-  				<li><a href="#">ЖелДорЭкспедиция</a></li>
-  			</ul>
-  			<a class="button" href="#"><span>Подробнее о нас</span></a>
-  		</section>
-  		<section class="contacts">
-  			<h2>Контакты</h2>
-  			<p>
-  				Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
-  			</p>
-  			<p>
-  				<a href="#"><img src="img/map.jpg" width="560" height="222" alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
-  			</p>
-  			<a class="button" href="#"><span>Напишите нам</span></a>
-  		</section>
-  	</main>
-  	<footer class="main-footer">
-  		<p class="footer-contacts">
-  			<a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device"></a>
-  			<span>г. Москва, ул. строителей, 15</span>
-  			<span>Тел.: +7 (495) 495-95-95</span>
-  		</p>
-  		<div class="footer-navigation">
-			<ul class="site-footer-navigation">
-				<li><a href="#">Доставка</a></li>
-				<li><a href="#">Гарантия</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
-			<ul class="user-footer-navigation">
-				<li class="login-link"><a href="#">Войти</a></li>
-				<li><a href="#">Сравнить</a></li>
-				<li><a href="#">Корзина</a></li>
-			</ul>
-		</div>
-		<ul class="footer-social">
-			<li><a class="social-button" href="#">Фейсбук</a></li>
-			<li><a class="social-button" href="#">Инстаграм</a></li>
-			<li><a class="social-button" href="#">Твиттер</a></li>
-		</ul>
-		<p class="footer-copyright">
-			<a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35" alt="Логотоп компании HTML Academy"></a>
-		</p>
-  	</footer>
-  	<section class="modal-contact">
-  	<h2 class="visually-hidden">Напишите нам</h2>
-  	<form class="contact-form" action="https://echo.htmlacademy.ru" method="post">
-  		<p>
-  			<label for="contact-name">Ваше имя:</label>
-  			<input id="contact-name" type="text" name="name" placeholder="Имя Фамилия">
-  		</p>
-  		<p>
-  			<label for="contact-mail">Ваш e-mail:</label>
-  			<input id="contact-mail" type="email" name="mail" placeholder="email@example.com">
-  		</p>
-  		<p>
-  			<label for="contact-letter">Текст письма:</label>
-  			<textarea id="contact-letter" name="letter"  cols="50" rows="10" placeholder="В свободной форме"></textarea>
-  		</p>
-  		<button class="button" type="submit"><span>Отправить</span></button>
-  	</form>
-  	<button class="button-close"><span>Закрыть</span></button>
+
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Девайс</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300&amp;subset=cyrillic" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+  <header class="main-header container">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
+      </a>
+      <div class="main-navigation-wrapper">
+        <form class="search" action="https://echo.htmlacademy.ru" method="get">
+          <input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
+          <button class="search-button" type="submit"><span>Найти</span></button>
+        </form>
+        <ul class="user-navigation">
+          <li><a class="login-link" href="login.html">Войти</a></li>
+          <li><a href="#">Сравнить</a></li>
+          <li><a href="#">Корзина</a></li>
+        </ul>
+      </div>
+      <ul class="site-navigation">
+        <li><a href="catalog.html">Каталог товаров</a></li>
+        <li><a href="#">Доставка</a></li>
+        <li><a href="#">Гарантия</a></li>
+        <li><a href="#">Контакты</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main class="container">
+    <h1 class="visually-hidden">Интернет-магазин Device</h1>
+    <!-- <section class="sliders">
+      <h2 class="visually-hidden">Лучшие товары</h2>
+      <ol>
+        <li class="sliders-item">
+          <section class="modal">
+            <h3>Делай селфи, как Бен Стиллер!</h3>
+            <p>
+              Самая длинная палка для селфи доступна в нашем магазине. Восемь (Восемь, Карл!) метров длиной и весом
+              всего 5 килограмм.
+            </p>
+            <a href="#"><img src="img/slider-1.png" width="384" height="486"
+                alt="Фото самой длинной палки для селфи"></a>
+            <table class="advantages">
+              <tr>
+                <td>8,5 м</td>
+                <td>5 кг</td>
+                <td>Карбон</td>
+              </tr>
+              <tr>
+                <td>Длина палки</td>
+                <td>Вес палки</td>
+                <td>Материал</td>
+              </tr>
+            </table>
+            <a class="button" href="#"><span>Подробнее</span></a>
+          </section>
+        </li>
+        <li>
+          <section class="modal">
+            <h3>Худеем правильно!</h3>
+            <p>
+              Мотивирующие фитнес-браслеты помогут найти в себе силы не пропускать занятия и соблюдать диету.
+            </p>
+            <a href="#"><img src="img/slider-2.png" width="345" height="485" alt="Фото мотивирующего браслета"></a>
+            <table class="advantages">
+              <tr>
+                <td>48 часов</td>
+              </tr>
+              <tr>
+                <td>Без подзарядки</td>
+              </tr>
+            </table>
+            <a class="button" href="#"><span>Подробнее</span></a>
+          </section>
+        </li>
+        <li>
+          <section class="modal">
+            <h3>Порхает как бабочка, жалит как пчела!</h3>
+            <p>
+              Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную
+              камеру.
+            </p>
+            <a href="#"><img src="img/slider-3.png" width="526" height="334" alt="Фото квадрокоптера с лазером"></a>
+            <table class="advantages">
+              <tr>
+                <td>800 м</td>
+                <td>50 м</td>
+              </tr>
+              <tr>
+                <td>Дальность полета</td>
+                <td>Радиус поражения</td>
+              </tr>
+            </table>
+            <a class="button" href="#"><span>Подробнее</span></a>
+          </section>
+        </li>
+      </ol>
+    </section>
+    <section class="popular">
+      <h2 class="visually-hidden">Популярные товары:</h2>
+      <ul class="popular-items">
+        <li><a href="">Виртуальная реальность</a></li>
+        <li><a href="">Моноподы для селфи</a></li>
+        <li><a href="">Экшн-камеры</a></li>
+        <li><a href="">Фитнес-браслеты</a></li>
+        <li><a href="">Умные часы</a></li>
+        <li><a href="">Квадрокоптеры</a></li>
+      </ul>
+    </section>
+    <section class="services">
+      <h2 class="visually-hidden">Наши сервисы:</h2>
+      <ul class="servises-list">
+        <li><button class="button">Доставка</button></li>
+        <li><button class="button">Гарантия</button></li>
+        <li><button class="button">Кредит</button></li>
+      </ul>
+      <ul class="services-description">
+        <li>
+          <h3>Доставка</h3>
+          <p>
+            Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно!
+            Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+          </p>
+        </li>
+        <li>
+          <h3>Гарантия</h3>
+          <p>
+            Если из-за возгорания купленного у нас товара у вас сгорит дом - не переживайте, мы выдадим вам новый.
+            Товар, не дом, конечно же.
+          </p>
+        </li>
+        <li>
+          <h3>Кредит</h3>
+          <p>
+            Залезть в долговую яму стало проще! Кредитные консультанты подберут для вас наиболее выгодные условия
+            кредита.
+            Выгодные для нашего банка, разумеется.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="companies">
+      <h2 class="visually-hidden">На нашем сайте представлена продукция популярных брендов:</h2>
+      <ul class="companies-list">
+        <li><a href="#"><img src="img/logo-1.jpg" width="260" height="100" alt="Dji"></a></li>
+        <li><a href="#"><img src="img/logo-2.jpg" width="260" height="100" alt="Sp Gadgets"></a></li>
+        <li><a href="#"><img src="img/logo-3.jpg" width="260" height="100" alt="Go Pro"></a></li>
+        <li><a href="#"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a></li>
+      </ul>
+    </section>  -->
+    <div class="info-columns container">
+      <section class="about-us">
+        <h2>О нас</h2>
+        <p>
+          Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
+        </p>
+        <p>
+          Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными
+          компаниями:
+        </p>
+        <ul class="deliveries">
+          <li><a href="#">Деловые Линии</a></li>
+          <li><a href="#">Автотрейдинг</a></li>
+          <li><a href="#">ЖелДорЭкспедиция</a></li>
+        </ul>
+        <a class="button" href="#"><span>Подробнее о нас</span></a>
+      </section>
+      <section class="contacts">
+        <h2>Контакты</h2>
+        <p>
+          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.
+          Всякое
+          бывает.
+        </p>
+        <p>
+          <a href="#"><img src="img/map.jpg" width="560" height="222"
+              alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
+        </p>
+        <a class="button" href="#"><span>Напишите нам</span></a>
+      </section>
+    </div>
+  </main>
+  <footer class="main-footer">
+    <div class="container">
+      <div class="footer-top">
+        <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
+            alt="Логотип интернет-магазина Device"></a>
+        <ul class="user-footer-navigation">
+          <li class="login-link"><a href="#">Войти</a></li>
+          <li><a href="#">Сравнить</a></li>
+          <li><a href="#">Корзина</a></li>
+        </ul>
+      </div>
+      <div class="footer-navigation footer-middle">
+        <ul class="site-footer-navigation">
+          <li><a href="#">Доставка</a></li>
+          <li><a href="#">Гарантия</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <p class="footer-contacts adress">г. Москва, ул. строителей, 15</p>
+        <p class="footer-contacts phone">Тел.: +7 (495) 495-95-95</p>
+      </div>
+      <div class="footer-bottom">
+        <p class="rectangle"></p>
+        <ul class="footer-social">
+          <li><a class="social-button" href="#">Фейсбук</a></li>
+          <li><a class="social-button" href="#">Инстаграм</a></li>
+          <li><a class="social-button" href="#">Твиттер</a></li>
+        </ul>
+        <p class="footer-copyright">
+          <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
+              alt="Логотоп компании HTML Academy"></a>
+        </p>
+      </div>
+    </div>
+  </footer>
+  <!--
+  <section class="modal-contact">
+    <h2 class="visually-hidden">Напишите нам</h2>
+    <form class="contact-form" action="https://echo.htmlacademy.ru" method="post">
+      <p>
+        <label for="contact-name">Ваше имя:</label>
+        <input id="contact-name" type="text" name="name" placeholder="Имя Фамилия">
+      </p>
+      <p>
+        <label for="contact-mail">Ваш e-mail:</label>
+        <input id="contact-mail" type="email" name="mail" placeholder="email@example.com">
+      </p>
+      <p>
+        <label for="contact-letter">Текст письма:</label>
+        <textarea id="contact-letter" name="letter" cols="50" rows="10" placeholder="В свободной форме"></textarea>
+      </p>
+      <button class="button" type="submit"><span>Отправить</span></button>
+    </form>
+    <button class="button-close"><span>Закрыть</span></button>
   </section>
-  	<section class="modal-map">
-  	<h2 class="visually-hidden">Как до нас добраться</h2>
-  	<p>
-  		<img src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
-  	</p>
-  	<button class="button-close"><span>Закрыть</span></button>
-  </section>
-  </body>
+  <section class="modal-map">
+    <h2 class="visually-hidden">Как до нас добраться</h2>
+    <p>
+      <img src="img/map.jpg" width="560" height="222" alt="г. Москва, ул. Строителей, 15">
+    </p>
+    <button class="button-close"><span>Закрыть</span></button>
+  </section> -->
+</body>
+
 </html>
