--- a/catalog.html
+++ b/catalog.html
@@ -163,7 +163,7 @@
             alt="Логотип интернет-магазина Device"></a>
         <ul class="user-footer-navigation">
           <li class="user-name"><a href="#">Валентин Петухов</a></li>
-          <li class="login-link"><a href="#">Выйти</a></li>
+          <li class="logout-link"><a href="#">Выйти</a></li>
           <li><a href="#">Сравнить</a></li>
           <li><a href="#">Корзина</a></li>
         </ul>
