добаавил меню каталога

--- a/index.html
+++ b/index.html
@@ -29,9 +29,25 @@
         </ul>
       </div>
       <ul class="site-navigation">
-        <li><a class="site-navigation-catalog" href="catalog.html">Каталог товаров</a></li>
+        <li>
+          <a class="site-navigation-catalog" href="catalog.html">Каталог товаров</a>
+          <div class="catalog-menu">
+            <ul>
+              <li><a href="#">Виртуальная реальность</a></li>
+              <li><a href="#">Моноподы для селфи</a></li>
+              <li><a href="#">Экшн-камеры</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Фитнес-браслеты</a></li>
+              <li><a href="#">Умные часы</a></li>
+            </ul>
+            <ul>
+              <li><a href="#">Квадрокоптеры</a></li>
+            </ul>
+          </div>
+        </li>
         <div class="site-navigation-wrapper">
-          <li><a  href="#">Доставка</a></li>
+          <li><a href="#">Доставка</a></li>
           <li><a href="#">Гарантия</a></li>
           <li><a href="#">Контакты</a></li>
         </div>
@@ -111,12 +127,12 @@
     <section class="popular">
       <h2 class="visually-hidden">Популярные товары:</h2>
       <ul class="popular-items">
-        <li><a href="">Виртуальная реальность</a></li>
-        <li><a href="">Моноподы для селфи</a></li>
-        <li><a href="">Экшн-камеры</a></li>
-        <li><a href="">Фитнес-браслеты</a></li>
-        <li><a href="">Умные часы</a></li>
-        <li><a href="">Квадрокоптеры</a></li>
+        <li><a href="#">Виртуальная реальность</a></li>
+        <li><a href="#">Моноподы для селфи</a></li>
+        <li><a href="#">Экшн-камеры</a></li>
+        <li><a href="#">Фитнес-браслеты</a></li>
+        <li><a href="#">Умные часы</a></li>
+        <li><a href="#">Квадрокоптеры</a></li>
       </ul>
     </section>
     <section class="services">
@@ -198,7 +214,7 @@
         <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
         <ul class="user-footer-navigation">
-          <li class=""><a href="#">Войти</a></li>
+          <li class="#"><a href="#">Войти</a></li>
           <li><a href="#">Сравнить</a></li>
           <li><a href="#">Корзина</a></li>
         </ul>
