--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
           </div>
         </li>
         <div class="site-navigation-wrapper">
-          <li><a href="#">Доставка</a></li>
-          <li><a href="#">Гарантия</a></li>
-          <li><a href="#">Контакты</a></li>
+          <div class="site-navigation-column">
+            <li class="site-navigation-delivery"><a href="#">Доставка</a></li>
+            <li class="site-navigation-warranty"><a href="#">Гарантия</a></li>
+          </div>
+            <li class="site-navigation-contacts"><a href="#">Контакты</a></li>
         </div>
       </ul>
     </nav>
