доделал блок "О нас"

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
         <li><a href="#"><img src="img/logo-4.jpg" width="260" height="100" alt="Vive"></a></li>
       </ul>
     </section>  -->
-    <div class="info-columns container">
+    <div class="info-columns">
       <section class="about-us">
-        <h2>О нас</h2>
+        <h2 class="about-us-title">О нас</h2>
         <p>
           Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
         </p>
@@ -193,10 +193,10 @@
           <li><a href="#">Автотрейдинг</a></li>
           <li><a href="#">ЖелДорЭкспедиция</a></li>
         </ul>
-        <a class="button" href="#"><span>Подробнее о нас</span></a>
+        <a class="button" href="#"><span class="button-text">Подробнее о нас</span></a>
       </section>
       <section class="contacts">
-        <h2>Контакты</h2>
+        <h2 class="contacts-title">Контакты</h2>
         <p>
           Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки.
           Всякое
