--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <a href="#"><img src="img/map.jpg" width="560" height="222"
               alt="Наш адрес: г. Москва, ул. строителей, 15"></a>
         </p>
-        <a class="button" href="#"><span>Напишите нам</span></a>
+        <a class="button" href="#"><span class="button-text">Напишите нам</span></a>
       </section>
     </div>
   </main>
@@ -216,9 +216,9 @@
         <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
         <ul class="user-footer-navigation">
-          <li class="#"><a href="#">Войти</a></li>
-          <li><a href="#">Сравнить</a></li>
-          <li><a href="#">Корзина</a></li>
+          <li><a class="footer-login" href="#">Войти</a></li>
+          <li><a class="footer-compare" href="#">Сравнить</a></li>
+          <li><a class="footer-cart" href="#  ">Корзина</a></li>
         </ul>
       </div>
       <div class="footer-navigation footer-middle">
@@ -231,11 +231,10 @@
         <p class="footer-contacts phone">Тел.: +7 (495) 495-95-95</p>
       </div>
       <div class="footer-bottom">
-        <p class="rectangle"></p>
         <ul class="footer-social">
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-          <li><a class="social-button" href="#">Твиттер</a></li>
+          <li><a class="social-fb" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+          <li><a class="social-instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+          <li><a class="social-twiter" href="#"><span class="visually-hidden">Твиттер</span></a></li>
         </ul>
         <p class="footer-copyright">
           <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
