--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
           <button class="search-button" type="submit"><span>Найти</span></button>
         </form>
         <ul class="user-navigation">
+            <div class="user-info-wrapper">
           <li class="user-info"><a class="login-link" href="login.html">Войти</a></li>
+            </div>
           <div class="user-navigation-wrapper">
             <li><a class="compare" href="#">Сравнить</a></li>
             <li><a class="cart" href="#">Корзина</a></li>
