--- a/catalog.html
+++ b/catalog.html
@@ -59,31 +59,6 @@
           </ul>
         </nav>
       </header>
-<!--   <header class="main-header container">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device">
-      </a>
-      <div class="main-navigation-wrapper">
-        <form class="search" action="https://echo.htmlacademy.ru" method="get">
-          <input class="search-field" type="text" name="search" placeholder="Поиск по сайту">
-          <button class="search-button" type="submit"><span>Найти</span></button>
-        </form>
-        <ul class="user-navigation">
-          <li class="user-name"><a href="#">Валентин Петухов</a></li>
-          <li class="logout-link"><a href="">Выйти</a></li>
-          <li><a href="#">Сравнить</a></li>
-          <li><a href="#">Корзина</a></li>
-        </ul>
-      </div>
-      <ul class="site-navigation">
-        <li><a href="catalog.html">Каталог товаров</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Гарантия</a></li>
-        <li><a href="#">Контакты</a></li>
-      </ul>
-    </nav>
-  </header> -->
   <main class="container">
     <h1>Моноподы для селфи</h1>
     <ul class="breadcrumbs">
@@ -206,6 +181,44 @@
     </ul> -->
   </main>
   <footer class="main-footer">
+      <div class="container">
+        <div class="footer-top">
+          <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
+              alt="Логотип интернет-магазина Device"></a>
+          <ul class="user-footer-navigation">
+            <div class="footer-info-wrapper">
+            <li><a class="footer-login" href="#">Валентин Петухов</a></li>
+            <li class="logout"><a class="logout-link" href="#">Выйти</a></li>
+          </div>
+          <div class="footer-navigation-wrapper">
+            <li><a class="footer-compare" href="#">Сравнить</a></li>
+            <li><a class="footer-cart" href="#  ">Корзина</a></li>
+          </div>
+          </ul>
+        </div>
+        <div class="footer-navigation footer-middle">
+          <ul class="site-footer-navigation">
+            <li><a href="#">Доставка</a></li>
+            <li><a href="#">Гарантия</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <p class="footer-contacts adress">г. Москва, ул. Строителей, 15</p>
+          <p class="footer-contacts phone">Тел.: +7 (495) 495-95-95</p>
+        </div>
+        <div class="footer-bottom">
+          <ul class="footer-social">
+            <li><a class="social-fb" href="#"><span class="visually-hidden">Фейсбук</span></a></li>
+            <li><a class="social-instagram" href="#"><span class="visually-hidden">Инстаграм</span></a></li>
+            <li><a class="social-twiter" href="#"><span class="visually-hidden">Твиттер</span></a></li>
+          </ul>
+          <p class="footer-copyright">
+            <a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-html.svg" width="27" height="35"
+                alt="Логотоп компании HTML Academy"></a>
+          </p>
+        </div>
+      </div>
+    </footer>
+ <!--  <footer class="main-footer">
     <div class="container">
       <div class="footer-top">
         <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
@@ -239,7 +252,7 @@
         </p>
       </div>
     </div>
-  </footer>
+  </footer> -->
   <!-- <footer class="main-footer">
     <p class="footer-contacts">
       <a><img src="img/footer-logo.svg" width="163" height="35" alt="Логотип интернет-магазина Device"></a>
