--- a/index.html
+++ b/index.html
@@ -217,11 +217,20 @@
       <div class="footer-top">
         <a class="footer-logo"><img src="img/footer-logo.svg" width="163" height="35"
             alt="Логотип интернет-магазина Device"></a>
-        <ul class="user-footer-navigation">
+            <ul class="user-footer-navigation">
+                <div class="footer-info-wrapper">
+                    <li><a class="footer-login" href="#">Войти</a></li>
+              </div>
+              <div class="footer-navigation-wrapper">
+                <li><a class="footer-compare" href="#">Сравнить</a></li>
+                <li><a class="footer-cart" href="#  ">Корзина</a></li>
+              </div>
+              </ul>
+<!--         <ul class="user-footer-navigation">
           <li><a class="footer-login" href="#">Войти</a></li>
           <li><a class="footer-compare" href="#">Сравнить</a></li>
           <li><a class="footer-cart" href="#  ">Корзина</a></li>
-        </ul>
+        </ul> -->
       </div>
       <div class="footer-navigation footer-middle">
         <ul class="site-footer-navigation">
@@ -229,7 +238,7 @@
           <li><a href="#">Гарантия</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <p class="footer-contacts adress">г. Москва, ул. строителей, 15</p>
+        <p class="footer-contacts adress">г. Москва, ул. Строителей, 15</p>
         <p class="footer-contacts phone">Тел.: +7 (495) 495-95-95</p>
       </div>
       <div class="footer-bottom">
