базовое оформление страницы каталога

--- a/catalog.html
+++ b/catalog.html
@@ -152,30 +152,34 @@
         <ul class="products">
           <li class="products-item">
             <a href="#">
-              <h3>Любительская селфи-палка</h3>
+
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             </a>
+            <a href="#"><h3>Любительская селфи-палка</h3></a>
             <p class="product-price">500 руб.</p>
           </li>
           <li class="products-item">
             <a href="#">
-              <h3>Профессиональная селфи-палка</h3>
+
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             </a>
+            <a href="#"><h3>Профессиональная селфи-палка</h3></a>
             <p class="product-price">1500 руб.</p>
           </li>
           <li class="products-item">
             <a href="#">
-              <h3>Непотопляемая селфи-палка</h3>
+
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
+            <a href="#"><h3>Непотопляемая селфи-палка</h3></a>
             <p class="product-price">2500 руб.</p>
           </li>
           <li class="products-item">
             <a href="#">
-              <h3>Селфи-палка «Следуй за мной»</h3>
+
               <img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
+            <a href="#"><h3>Селфи-палка «Следуй за мной»</h3></a>
             <p class="product-price">4900 руб.</p>
           </li>
         </ul>
