начал стилизовать состояния карточек товара

--- a/catalog.html
+++ b/catalog.html
@@ -156,36 +156,49 @@
         <h2 class="visually-hidden">Каталог товаров</h2>
         <ul class="products">
           <li class="products-item">
-            <a href="#">
+            <a class="item-photo" href="#">
 
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
             </a>
             <a href="#"><h3>Любительская селфи-палка</h3></a>
             <p class="product-price">500 руб.</p>
+            <p class="item-new visually-hidden">
+                <span >NEW</span>
+              </p>
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
           </li>
           <li class="products-item">
-            <a href="#">
+            <a class="item-photo" href="#">
 
               <img src="img/item-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
             </a>
             <a href="#"><h3>Профессиональная селфи-палка</h3></a>
-            <p class="product-price">1500 руб.</p>
+            <p class="product-price">1 500 руб.</p>
+            <p class="item-new visually-hidden">
+                <span >NEW</span>
+              </p>
           </li>
           <li class="products-item">
-            <a href="#">
+            <a class="item-photo" href="#">
 
               <img src="img/item-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
             <a href="#"><h3>Непотопляемая селфи-палка</h3></a>
-            <p class="product-price">2500 руб.</p>
+            <p class="product-price">2 500 руб.</p>
+            <p class="item-new visually-hidden">
+                <span >NEW</span>
+              </p>
           </li>
           <li class="products-item">
-            <a href="#">
+            <a class="item-photo" href="#">
 
               <img src="img/item-4.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
             </a>
             <a href="#"><h3>Селфи-палка «Следуй за мной»</h3></a>
-            <p class="product-price">4900 руб.</p>
+            <p class="product-price">4 900 руб.</p>
+            <p class="item-new">
+            <span >NEW</span>
+          </p>
           </li>
         </ul>
       </section>
