Начал оформдять маску при наведении на карточку товара

--- a/catalog.html
+++ b/catalog.html
@@ -159,13 +159,18 @@
             <a class="item-photo" href="#">
 
               <img src="img/item-1.jpg" width="360" height="380" alt="Любительская селфи-палка">
+
             </a>
+            <p class="item-cover">
+              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+              <a href="#">Добавить к сравнению</a>
+            </p>
             <a href="#"><h3>Любительская селфи-палка</h3></a>
             <p class="product-price">500 руб.</p>
             <p class="item-new visually-hidden">
                 <span >NEW</span>
               </p>
-              <a class="button" href="#"><span class="button-text">В корзину</span></a>
+
           </li>
           <li class="products-item">
             <a class="item-photo" href="#">
